# esp-idf-release-v5.0

components/bt/host/nimble/nimble/nimble/: syscfg.yml
components/bt/host/nimble/nimble/nimble/host/include/host/: ble_gap.h  ble_hs_pvcy.h
components/bt/host/nimble/nimble/nimble/host/src/: ble_att_svr.c  ble_gap.c  ble_gatts.c  ble_hs.c  ble_hs_hci_evt.c  ble_monitor.c
components/bt/host/nimble/nimble/nimble/include/nimble/: hci_common.h
components/bt/host/nimble/nimble/porting/examples/linux/include/syscfg/: syscfg.h
components/bt/host/nimble/nimble/porting/examples/linux_blemesh/include/syscfg/: syscfg.h
components/bt/host/nimble/nimble/porting/examples/nuttx/include/syscfg/: syscfg.h
components/bt/host/nimble/nimble/porting/nimble/include/syscfg/: syscfg.h
components/bt/host/nimble/nimble/porting/nimble/src/: nimble_port.c
components/bt/host/nimble/nimble/porting/npl/freertos/src/: npl_os_freertos.c
components/bt/host/nimble/nimble/porting/npl/riot/include/syscfg/: syscfg.h
components/hardware_driver/: CMakeLists.txt  Kconfig.projbuild
components/hardware_driver/boards/include/: bsp_board.h
components/mbedtls/mbedtls/: CMakeLists.txt  sbom.yml
components/perf_tester/: idf_component.yml
examples/bluetooth/nimble/blecent/main/: main.c
examples/protocols/FreeRTOS-ESP-IDF-HTTP-Client-main/: my_data.h
tools/record_test_set/: create_mn_test_json.py  create_mn_test_set.py  create_test_set.py
